chore(docker): add multi-stage Dockerfile; document docker deployment; add .env.example